Fixes alert alignment

--- a/less/_alerts.less
+++ b/less/_alerts.less
@@ -14,10 +14,11 @@
     }
 
     .alert-icon {
-        margin-right: 6px;
-        width: 1.28571429em; // fa-fw
-        margin-left: -3px;
+        margin-right: 3px;
+        width: 18px;
+        margin-left: -4px;
         text-align: center;
+        display: inline-block;
     }
 
     .btn {
